--- a/src/main/resources/templates/main-page.html
+++ b/src/main/resources/templates/main-page.html
@@ -71,7 +71,7 @@
                     <div class="card shadow text-center m-1 bg-body-tertiary rounded border border-0 box1">
                         <div class="row my-2">
                             <div class="col">
-                                <img src="/image/main_dashboard(user).png" class="img-fluid" style="width : 40%;">
+                                <img src="/image/AR.png" class="img-fluid" style="width : 40%;">
                             </div>
                             <div class="col text-start">
                                 <div class="row text-start">
@@ -115,12 +115,12 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card shadow text-center m-1 bg-body-tertiary rounded border border-0 box3" style="width: 22rem;">
+                    <div class="card shadow text-center m-1 bg-body-tertiary rounded border border-0 box3" style="width:22rem;">
                         <div class="row">
                             <div class="col text-start">
                                 <div class="row text-start">
                                     <div class="col-6 ms-3">
-                                        <img src="/image/building3.png" class="img-fluid">
+                                        <img src="/image/building_buttom.png" class="img-fluid">
                                     </div>
                                 </div>
                                 <div class="row text-center my-4">
@@ -131,7 +131,7 @@
                                 </div>
                                 <div class="row justify-content-end">
                                     <div class="col-6 align-self-end me-5">
-                                        <img src="/image/building4.png" class="img-fluid">
+                                        <img src="/image/building_top.png" class="img-fluid">
                                     </div>
                                 </div>
                             </div>
