--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -55,40 +55,6 @@
         .green-color {
             color: rgb(46, 189, 143);
         }
-        .nanum-gothic-regular {
-            font-family: "Nanum Gothic", sans-serif;
-            font-weight: 400;
-            font-style: normal;
-        }
-        .nanum-gothic-Bold {
-            font-family: "Nanum Gothic", sans-serif;
-            font-weight: 700;
-            font-style: normal;
-        }
-        .ubuntu-light {
-            font-family: "Ubuntu", sans-serif;
-            font-weight: 300;
-            font-style: normal;
-        }
-
-        .ubuntu-regular {
-            font-family: "Ubuntu", sans-serif;
-            font-weight: 400;
-            font-style: normal;
-        }
-
-        .ubuntu-medium {
-            font-family: "Ubuntu", sans-serif;
-            font-weight: 500;
-            font-style: normal;
-        }
-        .btn-toggle::before {
-            width: 1.25em;
-            line-height: 0;
-            content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
-            transition: transform .35s ease;
-            transform-origin: .5em 50%;
-        }
         [data-bs-theme="dark"] .btn-toggle::before {
             content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%28255,255,255,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
         }
@@ -100,9 +66,6 @@
             margin-top: .125rem;
             margin-left: 1.25rem;
         }
-        .scrollarea {
-            overflow-y: auto;
-        }
         .additional-options {
             display: none;
             transition: max-height 2s ease-out;
@@ -113,13 +76,21 @@
             display: block;
             max-height: 150px; /* 변경할 수 있는 최대 높이 */
         }
+        a{
+            color : #535353;
+            text-decoration: none;
+        }
+        a:hover{
+            color : black;
+            transition : color 1.5s;
+        }
     </style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
 <div class="container-fluid">
     <div class="row flex-nowrap">
-        <div class="bg-white col-auto col-md-2" style="max-width: 13vw;">
+        <div class="bg-white col-auto col-md-2" style="max-width: 25vw;">
             <div class="bg-white p-2">
                 <p class="d-flex mt-2 align-items-center">
                     <span class="d-none d-sm-inline">
@@ -133,23 +104,14 @@
                         </a>
                     </li>
                     <li class="nav-item mt-2">
-                        <a href="#" class="nav-link text-body-secondary">
-                            <img src="/image/arrow.triangle.branch.png" class="img-fluid mb-2">
-                            <span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">경로 관리</span>
-                            <img src="/image/chevron.down.png" class="img-fluid mb-2 ms-3" onclick="viewDetail()">
-                        </a>
                         <ul id="additionalOptions" class="additional-options nav nav-pills flex-column">
                             <li class="nav-item mt-1 nav-link">
                                 <img src="/image/dot.viewfinder.png" class="img-fluid mb-1">
-                                <a href="#" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none;">노드 관리</a>
+                                <a href="/admin/node" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none;">노드 관리</a>
                             </li>
                             <li class="nav-item mt-1 nav-link">
                                 <img src="/image/rectangle.connected.to.line.below.png" class="img-fluid mb-1">
-                                <a href="#" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none;">간선 관리</a>
-                            </li>
-                            <li class="nav-item mt-1 nav-link">
-                                <img src="/image/map.png" class="img-fluid mb-1">
-                                <a href="#" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none">경로 테스트</a>
+                                <a href="/admin/line" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none;">간선 관리</a>
                             </li>
                         </ul>
                     </li>
@@ -170,8 +132,8 @@
                         </a>
                     </li>
                     <li class="nav-item mt-2">
-                        <a href="#" class="nav-link text-body-secondary ps-2">
-                            <img src="/image/person.3.sequence.png" class="img-fluid mb-2 pe-1"><span class="fs-5 ms-2 d-none d-sm-inline noto-sans-sidebar">사용자 관리</span>
+                        <a href="/admin/users/list" class="nav-link text-body-secondary ps-2">
+                            <img src="/image/person.3.sequence.png" class="img-fluid mb-2 pe-1"><span class="fs-5 ms-1 d-none d-sm-inline noto-sans-sidebar">사용자 관리</span>
                         </a>
                     </li>
                     <li class="nav-item mt-2">
@@ -185,7 +147,7 @@
                         </a>
                     </li>
                     <li class="nav-item mt-2">
-                        <a href="#" class="nav-link text-body-secondary ps-2">
+                        <a href="/admin/list" class="nav-link text-body-secondary ps-2">
                             <img src="/image/person.badge.key.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">관리자 설정</span>
                         </a>
                     </li>
