--- a/src/main/resources/templates/line-add.html
+++ b/src/main/resources/templates/line-add.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <div class="row flex-nowrap">
-    <div class="bg-white col-auto col-md-2" style="max-width: 250px;">
+    <div class="bg-white col-auto col-md-2" style="max-width: 25vw;">
         <div class="bg-white p-2">
             <p class="d-flex mt-2 align-items-center">
                     <span class="d-none d-sm-inline">
@@ -33,23 +33,14 @@
                     </a>
                 </li>
                 <li class="nav-item mt-2">
-                    <a href="#" class="nav-link text-body-secondary">
-                        <img src="/image/arrow.triangle.branch.png" class="img-fluid mb-2">
-                        <span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">경로 관리</span>
-                        <img src="/image/chevron.down.png" class="img-fluid mb-2 ms-3" onclick="viewDetail()">
-                    </a>
                     <ul id="additionalOptions" class="additional-options nav nav-pills flex-column">
                         <li class="nav-item mt-1 nav-link">
                             <img src="/image/dot.viewfinder.png" class="img-fluid mb-1">
-                            <a href="#" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none;">노드 관리</a>
+                            <a href="/admin/node" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none;">노드 관리</a>
                         </li>
                         <li class="nav-item mt-1 nav-link">
                             <img src="/image/rectangle.connected.to.line.below.png" class="img-fluid mb-1">
-                            <a href="#" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none;">간선 관리</a>
-                        </li>
-                        <li class="nav-item mt-1 nav-link">
-                            <img src="/image/map.png" class="img-fluid mb-1">
-                            <a href="#" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none">경로 테스트</a>
+                            <a href="/admin/line" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none;">간선 관리</a>
                         </li>
                     </ul>
                 </li>
@@ -70,8 +61,8 @@
                     </a>
                 </li>
                 <li class="nav-item mt-2">
-                    <a href="#" class="nav-link text-body-secondary ps-2">
-                        <img src="/image/person.3.sequence.png" class="img-fluid mb-2 pe-1"><span class="fs-5 ms-2 d-none d-sm-inline noto-sans-sidebar">사용자 관리</span>
+                    <a href="/admin/users/list" class="nav-link text-body-secondary ps-2">
+                        <img src="/image/person.3.sequence.png" class="img-fluid mb-2 pe-1"><span class="fs-5 ms-1 d-none d-sm-inline noto-sans-sidebar">사용자 관리</span>
                     </a>
                 </li>
                 <li class="nav-item mt-2">
@@ -85,7 +76,7 @@
                     </a>
                 </li>
                 <li class="nav-item mt-2">
-                    <a href="#" class="nav-link text-body-secondary ps-2">
+                    <a href="/admin/list" class="nav-link text-body-secondary ps-2">
                         <img src="/image/person.badge.key.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">관리자 설정</span>
                     </a>
                 </li>
@@ -141,7 +132,7 @@
                                                     <select class="form-select" id="inputGroupSelect01" th:field="*{nodeNameFirst}"
                                                             th:classappend="${#fields.hasErrors('nodeNameFirst')} or ${nameMessage} == '이미 존재하는 경로입니다.' ? 'border border-danger' : ''">
                                                         <option value="" selected>노드 선택</option>
-                                                        <option th:each="node : ${nodeList}" th:value="${node.getName()}" th:text="${node.getName()}">One</option>
+                                                        <option th:each="node : ${nodeList1}" th:value="${node}" th:text="${node}">One</option>
                                                     </select>
                                                 </div>
                                                 <div th:if="${#fields.hasErrors('nodeNameFirst')}" class="text-start ms-2 text-danger" style="font-size:80%">
@@ -154,11 +145,14 @@
                                                     <select class="form-select" id="inputGroupSelect02" th:field="*{nodeNameSecond}"
                                                             th:classappend="${#fields.hasErrors('nodeNameSecond')} or ${pathMessage} == '같은 경로를 지정하셨습니다.' ? 'border border-danger' : ''">
                                                         <option value="" selected>노드 선택</option>
-                                                        <option th:each="node : ${nodeList}" th:value="${node.getName()}" th:text="${node.getName()}">One</option>
+                                                        <option th:each="node : ${nodeList2}" th:value="${node}" th:text="${node}">One</option>
                                                     </select>
                                                 </div>
                                                 <div th:if="${#fields.hasErrors('nodeNameSecond')}" class="text-start ms-2 text-danger" style="font-size:80%">
                                                     <i class="bi bi-exclamation-circle"></i><span class="ps-1 pt-1" th:errors="*{nodeNameSecond}">아이디 오류</span>
+                                                </div>
+                                                <div th:if="${pathMessage} == '같은 경로를 지정하셨습니다.'" class="text-start ms-2 text-danger" style="font-size:80%">
+                                                    <i class="bi bi-exclamation-circle"></i><span class="ps-1 pt-1" th:text="${pathMessage}">아이디 오류</span>
                                                 </div>
                                             </div>
                                         </div>
