--- a/src/main/resources/templates/node-manage.html
+++ b/src/main/resources/templates/node-manage.html
@@ -91,16 +91,13 @@
 <body>
 <div class="container-fluid">
     <div class="row flex-nowrap">
-        <div class="bg-white col-auto col-md-2" style="max-width: 250px;">
+        <div class="bg-white col-auto col-md-2" style="max-width: 25vw;">
             <div class="bg-white p-2">
                 <p class="d-flex mt-2 align-items-center">
                     <span class="d-none d-sm-inline">
                         <img src="/image/Gach_homepage_main.png" class="img-fluid">
                     </span>
                 </p>
-
-
-
                 <ul class="nav flex-column mt-4">
                     <li class="nav-item mt-2">
                         <a href="#" class="nav-link text-body-secondary">
@@ -108,23 +105,14 @@
                         </a>
                     </li>
                     <li class="nav-item mt-2">
-                        <a href="#" class="nav-link text-body-secondary">
-                            <img src="/image/arrow.triangle.branch.png" class="img-fluid mb-2">
-                            <span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">경로 관리</span>
-                            <img src="/image/chevron.down.png" class="img-fluid mb-2 ms-3" onclick="viewDetail()">
-                        </a>
                         <ul id="additionalOptions" class="additional-options nav nav-pills flex-column">
                             <li class="nav-item mt-1 nav-link">
                                 <img src="/image/dot.viewfinder.png" class="img-fluid mb-1">
-                                <a href="#" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none;">노드 관리</a>
+                                <a href="/admin/node" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none;">노드 관리</a>
                             </li>
                             <li class="nav-item mt-1 nav-link">
                                 <img src="/image/rectangle.connected.to.line.below.png" class="img-fluid mb-1">
-                                <a href="#" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none;">간선 관리</a>
-                            </li>
-                            <li class="nav-item mt-1 nav-link">
-                                <img src="/image/map.png" class="img-fluid mb-1">
-                                <a href="#" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none">경로 테스트</a>
+                                <a href="/admin/line" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none;">간선 관리</a>
                             </li>
                         </ul>
                     </li>
@@ -145,8 +133,8 @@
                         </a>
                     </li>
                     <li class="nav-item mt-2">
-                        <a href="#" class="nav-link text-body-secondary ps-2">
-                            <img src="/image/person.3.sequence.png" class="img-fluid mb-2 pe-1"><span class="fs-5 ms-2 d-none d-sm-inline noto-sans-sidebar">사용자 관리</span>
+                        <a href="/admin/users/list" class="nav-link text-body-secondary ps-2">
+                            <img src="/image/person.3.sequence.png" class="img-fluid mb-2 pe-1"><span class="fs-5 ms-1 d-none d-sm-inline noto-sans-sidebar">사용자 관리</span>
                         </a>
                     </li>
                     <li class="nav-item mt-2">
@@ -160,7 +148,7 @@
                         </a>
                     </li>
                     <li class="nav-item mt-2">
-                        <a href="#" class="nav-link text-body-secondary ps-2">
+                        <a href="/admin/list" class="nav-link text-body-secondary ps-2">
                             <img src="/image/person.badge.key.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">관리자 설정</span>
                         </a>
                     </li>
@@ -222,7 +210,7 @@
                                             <td th:text="${node.getNodeLatitude()}">Otto</td>
                                             <td th:text="${node.getNodeLongitude()}">@mdo</td>
                                             <td th:text="${node.getNodeAltitude()}"></td>
-                                            <td class="text-center pe-5">
+                                            <td class="text-start ps-4">
                                                 <a th:href="@{'/admin/node/'+${node.getNodeId()}}" >
                                                     <i class = "bi bi-info-circle"></i>
                                                 </a>
