--- a/src/main/resources/templates/user-detail.html
+++ b/src/main/resources/templates/user-detail.html
@@ -20,7 +20,7 @@
 <body>
 <div class="row flex-nowrap">
     <!-- Sidebar -->
-    <div class="bg-white col-auto col-md-2" style="max-width: 250px;">
+    <div class="bg-white col-auto col-md-2" style="max-width: 25vw;">
         <div class="bg-white p-2">
             <p class="d-flex mt-2 align-items-center">
                     <span class="d-none d-sm-inline">
@@ -34,23 +34,14 @@
                     </a>
                 </li>
                 <li class="nav-item mt-2">
-                    <a href="#" class="nav-link text-body-secondary">
-                        <img src="/image/arrow.triangle.branch.png" class="img-fluid mb-2">
-                        <span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">경로 관리</span>
-                        <img src="/image/chevron.down.png" class="img-fluid mb-2 ms-3" onclick="viewDetail()">
-                    </a>
                     <ul id="additionalOptions" class="additional-options nav nav-pills flex-column">
                         <li class="nav-item mt-1 nav-link">
                             <img src="/image/dot.viewfinder.png" class="img-fluid mb-1">
-                            <a href="#" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none;">노드 관리</a>
+                            <a href="/admin/node" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none;">노드 관리</a>
                         </li>
                         <li class="nav-item mt-1 nav-link">
                             <img src="/image/rectangle.connected.to.line.below.png" class="img-fluid mb-1">
-                            <a href="#" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none;">간선 관리</a>
-                        </li>
-                        <li class="nav-item mt-1 nav-link">
-                            <img src="/image/map.png" class="img-fluid mb-1">
-                            <a href="#" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none">경로 테스트</a>
+                            <a href="/admin/line" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none;">간선 관리</a>
                         </li>
                     </ul>
                 </li>
@@ -71,8 +62,8 @@
                     </a>
                 </li>
                 <li class="nav-item mt-2">
-                    <a href="#" class="nav-link text-body-secondary ps-2">
-                        <img src="/image/person.3.sequence.png" class="img-fluid mb-2 pe-1"><span class="fs-5 ms-2 d-none d-sm-inline noto-sans-sidebar">사용자 관리</span>
+                    <a href="/admin/users/list" class="nav-link text-body-secondary ps-2">
+                        <img src="/image/person.3.sequence.png" class="img-fluid mb-2 pe-1"><span class="fs-5 ms-1 d-none d-sm-inline noto-sans-sidebar">사용자 관리</span>
                     </a>
                 </li>
                 <li class="nav-item mt-2">
@@ -86,7 +77,7 @@
                     </a>
                 </li>
                 <li class="nav-item mt-2">
-                    <a href="#" class="nav-link text-body-secondary ps-2">
+                    <a href="/admin/list" class="nav-link text-body-secondary ps-2">
                         <img src="/image/person.badge.key.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">관리자 설정</span>
                     </a>
                 </li>
@@ -114,14 +105,14 @@
                 <div class="col px-5 py-1">
                     <div class="card border-light px-5 py-1" style="max-height: 85vh">
                         <div class="shadow p-3 rounded border-bottom border-4 border-primary-subtle">
-                            <form th:object="${user}" th:action="@{/admin/user}" method="post">
+                            <form th:object="${userForm}" th:action="@{/admin/users/update}" method="post">
                                 <div class="row">
                                     <div class="col">
                                         <span class="noto-sans-700 fs-3">사용자 상세 정보</span>
                                     </div>
                                     <div class="col text-end">
                                         <button type="submit" class="btn btn-outline-success">수정</button>
-                                        <a th:href="@{'/admin/user/delete'+${user.getUserId()}}" class="btn btn-outline-danger">삭제</a>
+                                        <a th:href="@{'/admin/users/delete/'+${userForm.getUsername()}}" class="btn btn-outline-danger">삭제</a>
                                     </div>
                                 </div>
                                 <div class="row">
@@ -130,19 +121,23 @@
                                             <div class="col-6">
                                                 <div class="input-group mb-3">
                                                     <span class="input-group-text">&nbsp;아이디&nbsp;</span>
-                                                    <input type="text" class="form-control" th:value="${}" th:text="${}">
+                                                    <input type="text" class="form-control" th:field="*{username}" readonly>
                                                 </div>
                                             </div>
                                             <div class="col">
                                                 <div class="input-group mb-3">
-                                                    <span class="input-group-text">&nbsp;성별&nbsp;</span>
-                                                    <input type="text" class="form-control" th:value="${}" th:text="${}">
+                                                    <label class="input-group-text" for="inputGroupSelect01">&nbsp;&nbsp;성별&nbsp;&nbsp;</label>
+                                                    <select class="form-select" id="inputGroupSelect01" th:field="*{userGender}">
+                                                        <option th:each="s : ${gender}" th:value="${s}" th:text="${s}" th:selected="${s == userForm.userGender}"></option>
+                                                    </select>
                                                 </div>
                                             </div>
                                             <div class="col">
                                                 <div class="input-group mb-3">
-                                                    <span class="input-group-text">&nbsp;속도&nbsp;</span>
-                                                    <input type="text" class="form-control" th:value="${}" th:text="${}">
+                                                    <label class="input-group-text" for="inputGroupSelect02">&nbsp;&nbsp;속도&nbsp;&nbsp;</label>
+                                                    <select class="form-select" id="inputGroupSelect02" th:field="*{userSpeed}">
+                                                        <option th:each="s1 : ${speed}" th:value="${s1}" th:text="${s1}" th:selected="${s1 == userForm.userSpeed}"></option>
+                                                    </select>
                                                 </div>
                                             </div>
                                         </div>
@@ -150,47 +145,27 @@
                                             <div class="col">
                                                 <div class="input-group mb-3">
                                                     <span class="input-group-text">&nbsp;닉네임&nbsp;</span>
-                                                    <input type="text" class="form-control" th:field="*{}">
+                                                    <input type="text" class="form-control" th:field="*{userNickname}">
                                                 </div>
                                             </div>
                                             <div class="col">
                                                 <div class="input-group mb-3">
                                                     <span class="input-group-text">출생년도</span>
-                                                    <input type="text" class="form-control" th:value="${}" th:text="${}">
+                                                    <input type="text" class="form-control" th:field="*{userBirth}">
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="row mt-4">
-                                            <div class="col-6">
-                                                <div class="input-group mb-3">
-                                                    <span class="input-group-text">&nbsp;학과&nbsp;</span>
-                                                    <input type="text" class="form-control" th:value="${}" th:text="${}">
-                                                </div>
-                                            </div>
                                             <div class="col">
                                                 <div class="input-group mb-3">
                                                     <span class="input-group-text">&nbsp;키&nbsp;</span>
-                                                    <input type="text" class="form-control" th:value="${}" th:text="${}">
+                                                    <input type="text" class="form-control" th:field="*{userHeight}">
                                                 </div>
                                             </div>
                                             <div class="col">
                                                 <div class="input-group mb-3">
                                                     <span class="input-group-text">&nbsp;몸무게&nbsp;</span>
-                                                    <input type="text" class="form-control" th:value="${}" th:text="${}">
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="row mt-4">
-                                            <div class="col">
-                                                <div class="input-group mb-3">
-                                                    <span class="input-group-text">&nbsp;추천 경로 만족도&nbsp;</span>
-                                                    <input type="text" class="form-control" th:value="${}" th:text="${}">
-                                                </div>
-                                            </div>
-                                            <div class="col">
-                                                <div class="input-group mb-3">
-                                                    <span class="input-group-text">&nbsp;소요시간 예측 만족도&nbsp;</span>
-                                                    <input type="text" class="form-control" th:value="${}" th:text="${}">
+                                                    <input type="text" class="form-control" th:field="*{userWeight}">
                                                 </div>
                                             </div>
                                         </div>
