--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -73,37 +73,62 @@
     font-weight: 700;
     font-style: normal;
 }
+@font-face {
+    font-family: 'SUITE-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/SUITE-Regular.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+}
+.fontReg {
+    font-family: SUITE-Regular;
+}
 .fontHv{
     font-family: LINESeedKR-Bd;
 }
 
 .add{
     background-color: white;
-    pointer-events: none;
-    color : rgb(34, 197, 94);
-    border-color : rgb(34, 197, 94);
+    color : rgb(29, 78, 216);
+    border-color : rgb(29, 78, 216);
+}
+
+.add:hover {
+    background-color : rgb(29, 78, 216);
+    border-color:white;
+    color : white;
 }
 
 .save{
     background-color: white;
-    pointer-events: none;
     color : rgb(17,160,248);
     border-color : rgb(17,160,248);
 }
 
 .update{
     background-color: white;
-    pointer-events: none;
-    color : rgb(34, 197, 94);
-    border-color : rgb(34, 197, 94);
+    color : rgb(56, 189, 248);
+    border-color : rgb(56, 189, 248);
+}
+
+.update:hover {
+    background-color : rgb(56, 189, 248);
+    color : white;
+    border-color : white;
 }
 
 .delete{
     background-color: white;
-    pointer-events: none;
     color : rgb(244, 63, 94);
     border-color : rgb(244, 63, 94);
 }
+
+.delete:hover {
+    background-color : rgb(244, 63, 94);
+    color : white;
+    border-color : white;
+}
+
+
 input[type="text"] {
     border: none;
     border-radius: 1rem; /* 라운드된 테두리 */
@@ -134,7 +159,6 @@ input[type="text"]:disabled {
     background-color: white;
     border-color:gray;
 }
-
 @font-face {
     font-family: 'SokchoBadaDotum';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2402_1@1.0/SokchoBadaDotum.woff2') format('woff2');
