--- a/src/main/resources/templates/line-manage.html
+++ b/src/main/resources/templates/line-manage.html
@@ -76,14 +76,13 @@
                                 </div>
                             </div>
                             <div class="col-3 offset-4 align-items-center text-end">
-                                <button type="submit" class="mt-3 btn btn-primary add">지점 추가</button>
+                                <a type="submit" class="mt-3 btn btn-primary add" href="/admin/line/add" th:href="@{/admin/line/add}">경로 추가</a>
                             </div>
                         </div>
                         <div class="row" style="overflow-x: scroll; height:40vh">
                             <table class="table table-hover text-center rounded">
                                 <thead>
                                 <tr>
-                                    <th scope="col">번호</th>
                                     <th scope="col">간선 이름</th>
                                     <th scope="col">시작 노드</th>
                                     <th scope="col">종료 노드</th>
@@ -94,7 +93,6 @@
                                 </thead>
                                 <tbody>
                                 <tr th:each="line : ${lineList}">
-                                    <th scope="row" th:text="${line.getLineId()}">1</th>
                                     <td th:text="${line.getLineName()}">Mark</td>
                                     <td th:text="${line.getNodeNameFirst()}">Otto</td>
                                     <td th:text="${line.getNodeNameSecond()}">@mdo</td>
