--- a/src/main/resources/templates/user-detail.html
+++ b/src/main/resources/templates/user-detail.html
@@ -1,178 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head th:replace="~{/fragment :: head}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
-    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=unkjrqfqrq"></script>
-    <style>
-        .row-mine {
-            max-width: 83%;
-        }
-    </style>
 </head>
 <body>
-<div class="row flex-nowrap">
-    <!-- Sidebar -->
-    <div class="bg-white col-auto col-md-2" style="max-width: 25vw;">
-        <div class="bg-white p-2">
-            <p class="d-flex mt-2 align-items-center">
-                    <span class="d-none d-sm-inline">
-                        <img src="/image/Gach_homepage_main.png" class="img-fluid">
-                    </span>
-            </p>
-            <ul class="nav flex-column mt-4">
-                <li class="nav-item mt-2">
-                    <a href="#" class="nav-link text-body-secondary">
-                        <img src="/image/squares.leading.rectangle.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">대시보드</span>
-                    </a>
-                </li>
-                <li class="nav-item mt-2">
-                    <ul id="additionalOptions" class="additional-options nav nav-pills flex-column">
-                        <li class="nav-item mt-1 nav-link">
-                            <img src="/image/dot.viewfinder.png" class="img-fluid mb-1">
-                            <a href="/admin/node" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none;">노드 관리</a>
-                        </li>
-                        <li class="nav-item mt-1 nav-link">
-                            <img src="/image/rectangle.connected.to.line.below.png" class="img-fluid mb-1">
-                            <a href="/admin/line" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none;">간선 관리</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="nav-item mt-2">
-                    <a href="#" class="nav-link text-body-secondary">
-                        <img src="/image/brain.head.profile.png" class="img-fluid mb-2 me-4">
-                        <span class="fs-5 d-none d-sm-inline noto-sans-sidebar">AI 관리</span>
-                    </a>
-                </li>
-                <li class="nav-item mt-2">
-                    <a href="#" class="nav-link text-body-secondary">
-                        <img src="/image/building.2.png" class="img-fluid mb-2 me-1"><span class="fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar">장소 관리</span>
-                    </a>
-                </li>
-                <li class="nav-item mt-2">
-                    <a href="#" class="nav-link text-body-secondary">
-                        <img src="/image/calendar.badge.plus.png" class="img-fluid mb-2"><span class="fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar">행사 관리</span>
-                    </a>
-                </li>
-                <li class="nav-item mt-2">
-                    <a href="/admin/users/list" class="nav-link text-body-secondary ps-2">
-                        <img src="/image/person.3.sequence.png" class="img-fluid mb-2 pe-1"><span class="fs-5 ms-1 d-none d-sm-inline noto-sans-sidebar">사용자 관리</span>
-                    </a>
-                </li>
-                <li class="nav-item mt-2">
-                    <a href="#" class="nav-link text-body-secondary">
-                        <img src="/image/person.fill.questionmark.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">문의 관리</span>
-                    </a>
-                </li>
-                <li class="nav-item mt-2">
-                    <a href="#" class="nav-link text-body-secondary">
-                        <img src="/image/exclamationmark.circle.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">로그</span>
-                    </a>
-                </li>
-                <li class="nav-item mt-2">
-                    <a href="/admin/list" class="nav-link text-body-secondary ps-2">
-                        <img src="/image/person.badge.key.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">관리자 설정</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="row-mine py-3 px-0 mx-0 border border-0">
-        <div class="container">
-
-            <!-- Header -->
-
-            <div class="row">
-                <div class="col align-items-start ubuntu-medium fs-2">
-                    사용자 관리
+<div class="container-fluid">
+    <header th:replace="~{/fragment :: header}"></header>
+    <div class="row">
+        <div th:replace="~{fragment :: sidebar('user')}"></div>
+        <div class="col-10" style="background-color: rgb(242,248,250); width: 85%; margin-left:15%; margin-top : 5%">
+            <div class="container-fluid mt-4 p-0" style="background-color: rgb(242,248,250);">
+                <div class="row ms-5 mb-3 mt-2 nodeHeader">
+                    관리자 > 사용자 관리 >  사용자 상세조회
                 </div>
-                <div class="col align-items-end text-end">
-                    <b class="noto-sans-sidebar py-5 my-5" style="font-size:1.5rem;">노명준</b>
+                <div class="row mb-4 ms-5 fs-1 fontHv">
+                    사용자 상세조회
                 </div>
-            </div>
-
-            <!-- Small Box-->
-
-            <div class="row px-5 py-1">
-                <div class="col px-5 py-1">
-                    <div class="card border-light px-5 py-1" style="max-height: 85vh">
-                        <div class="shadow p-3 rounded border-bottom border-4 border-primary-subtle">
-                            <form th:object="${userForm}" th:action="@{/admin/users/update}" method="post">
-                                <div class="row">
-                                    <div class="col">
-                                        <span class="noto-sans-700 fs-3">사용자 상세 정보</span>
-                                    </div>
-                                    <div class="col text-end">
-                                        <button type="submit" class="btn btn-outline-success">수정</button>
-                                        <a th:href="@{'/admin/users/delete/'+${userForm.getUsername()}}" class="btn btn-outline-danger">삭제</a>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col">
-                                        <div class="row mt-4">
-                                            <div class="col-6">
-                                                <div class="input-group mb-3">
-                                                    <span class="input-group-text">&nbsp;아이디&nbsp;</span>
-                                                    <input type="text" class="form-control" th:field="*{username}" readonly>
-                                                </div>
-                                            </div>
-                                            <div class="col">
-                                                <div class="input-group mb-3">
-                                                    <label class="input-group-text" for="inputGroupSelect01">&nbsp;&nbsp;성별&nbsp;&nbsp;</label>
-                                                    <select class="form-select" id="inputGroupSelect01" th:field="*{userGender}">
-                                                        <option th:each="s : ${gender}" th:value="${s}" th:text="${s}" th:selected="${s == userForm.userGender}"></option>
-                                                    </select>
-                                                </div>
-                                            </div>
-                                            <div class="col">
-                                                <div class="input-group mb-3">
-                                                    <label class="input-group-text" for="inputGroupSelect02">&nbsp;&nbsp;속도&nbsp;&nbsp;</label>
-                                                    <select class="form-select" id="inputGroupSelect02" th:field="*{userSpeed}">
-                                                        <option th:each="s1 : ${speed}" th:value="${s1}" th:text="${s1}" th:selected="${s1 == userForm.userSpeed}"></option>
-                                                    </select>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="row mt-4">
-                                            <div class="col">
-                                                <div class="input-group mb-3">
-                                                    <span class="input-group-text">&nbsp;닉네임&nbsp;</span>
-                                                    <input type="text" class="form-control" th:field="*{userNickname}">
-                                                </div>
-                                            </div>
-                                            <div class="col">
-                                                <div class="input-group mb-3">
-                                                    <span class="input-group-text">출생년도</span>
-                                                    <input type="text" class="form-control" th:field="*{userBirth}">
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="row mt-4">
-                                            <div class="col">
-                                                <div class="input-group mb-3">
-                                                    <span class="input-group-text">&nbsp;키&nbsp;</span>
-                                                    <input type="text" class="form-control" th:field="*{userHeight}">
-                                                </div>
-                                            </div>
-                                            <div class="col">
-                                                <div class="input-group mb-3">
-                                                    <span class="input-group-text">&nbsp;몸무게&nbsp;</span>
-                                                    <input type="text" class="form-control" th:field="*{userWeight}">
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </form>
+                <div class="row text-center mx-5 rounded">
+                    <div class="row align-items-center">
+                        <div class="col-3 offset-9 text-end">
+                            <button type="submit" class="fs-5 mt-3 btn btn-primary update fontHv">사용자 수정</button>
+                            <button type="submit" class="fs-5 mt-3 btn btn-primary delete fontHv">사용자 삭제</button>
                         </div>
+                    </div>
+                    <div class="col text-start ms-5 ps-5">
+                        <form th:object="${userForm}" th:action="@{/admin/users/update}" method="post">
+                            <div class="row mt-3">
+                                <div class="col-6">
+                                    <div class="form-floating mb-3">
+                                        <p class="fs-4 nodeHeader">ID</p>
+                                        <hr>
+                                        <input type="text" th:field="*{username}" class="form-control fontHv mt-0 pt-0 fs-4" id="floatingInput1" placeholder="name@example.com">
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="form-floating mb-3">
+                                        <p class="fs-4 nodeHeader">성별</p>
+                                        <hr>
+                                        <input type="text" th:field="*{userGender}" class="form-control fontHv mt-0 pt-0 fs-4" id="floatingInput2" placeholder="name@example.com">
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="form-floating mb-3">
+                                        <p class="fs-4 nodeHeader">지정 속도</p>
+                                        <hr>
+                                        <input type="text" th:field="*{userSpeed}" class="form-control fontHv mt-0 pt-0 fs-4" id="floatingInput3" placeholder="name@example.com">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mt-3">
+                                <div class="col">
+                                    <div class="form-floating mb-3">
+                                        <p class="fs-4 nodeHeader">닉네임</p>
+                                        <hr>
+                                        <input type="text" th:field="*{userNickname}" class="form-control fontHv mt-0 pt-0 fs-4" id="floatingInput4" placeholder="name@example.com">
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="form-floating mb-3">
+                                        <p class="fs-4 nodeHeader">출생년도</p>
+                                        <hr>
+                                        <input type="text" th:field="*{userBirth}" class="form-control fontHv mt-0 pt-0 fs-4" id="floatingInput5" placeholder="name@example.com">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mt-3">
+                                <div class="col-6">
+                                    <div class="form-floating mb-3">
+                                        <p class="fs-4 nodeHeader">학과</p>
+                                        <hr>
+                                        <input type="text" class="form-control fontHv mt-0 pt-0 fs-4" id="floatingInput6" placeholder="name@example.com">
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="form-floating mb-3">
+                                        <p class="fs-4 nodeHeader">키</p>
+                                        <hr>
+                                        <input type="text" th:field="*{userHeight}" class="form-control fontHv mt-0 pt-0 fs-4" id="floatingInput7" placeholder="name@example.com">
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="form-floating mb-3">
+                                        <p class="fs-4 nodeHeader">몸무게</p>
+                                        <hr>
+                                        <input type="text" th:field="*{userWeight}" class="form-control fontHv mt-0 pt-0 fs-4" id="floatingInput8" placeholder="name@example.com">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mt-3">
+                                <div class="col">
+                                    <div class="form-floating mb-3">
+                                        <p class="fs-4 nodeHeader">추천경로 만족도</p>
+                                        <hr>
+                                        <input type="text" class="form-control fontHv mt-0 pt-0 fs-4" id="floatingInput9" placeholder="name@example.com">
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="form-floating mb-3">
+                                        <p class="fs-4 nodeHeader">소요시간 만족도</p>
+                                        <hr>
+                                        <input type="text" class="form-control fontHv mt-0 pt-0 fs-4" id="floatingInput10" placeholder="name@example.com">
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
